# DBSchema

./: Cargo.toml  Makefile
dbschema/: Cargo.toml
dbschema-derive/: Cargo.toml
dbschema-derive/src/: attributes.rs  derive.rs  lib.rs  rename.rs
dbschema-derive/tests/: elastic_rename.rs  flatten.rs  serde_default.rs  serde_flatten.rs  verify.rs
dbschema-elastic/: Cargo.toml
dbschema-elastic/src/: error.rs  filter.rs  lib.rs  mapping.rs  range.rs  value.rs
dbschema/src/: error.rs  filter.rs  filter_path.rs  lib.rs  schema.rs  table.rs  tagged.rs  value_ext.rs  versioning.rs
dbschema/test/: filter1.json  filter2.json  filter3.json  filter4.json  filter5.json  interface-table.json  interface-value.json  schema.json  value.json
dbschema/tests/: equal.rs  set_default.rs
