[package]
name = "dbschema-elastic"
version = "0.1.3"
authors = ["Maarten Deprez", "Vincent Stuyck"]
edition = "2021"
description = "Types and functions for using DbSchema with Elasticsearch"
repository = "https://github.com/ContinuousC/DBSchema.git"
license = "Elastic-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = { version = "0.4.11", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

dbschema = { version = "0.1.36" }
log = "0.4.20"
